# openemr-base-clean

./: .gitignore  ARCHITECTURE.md  AUDIT.md  COST_ANALYSIS.md  DEMO_SCRIPT.md  DEMO_VIDEO_SCRIPT.md  DEMO_VIDEO_SCRIPT_W3.md  INTERVIEW_PREP.md  README.md  SUBMISSION.md  SUBMISSION_W2.md  SUBMISSION_W3.md  THREAT_MODEL.md  USERS.md  USERS_W1.md  W2_ARCHITECTURE.md  W2_Architecture_Defense.pptx  W2_ORCHESTRATION.md
clinical-copilot/: .env.example  .gitignore  BASELINE_METRICS.md  COST_ANALYSIS.md  Dockerfile  QA_REPORT.md  README.md  eval_results.json  openapi-w2.yaml  pyproject.toml  qa_human.py  run_evals.py
clinical-copilot/api-collection/bruno/: 01-health.bru  02-ready.bru  03-chat-previsit-brief.bru  04-chat-med-interactions.bru  05-chat-labs.bru  06-authz-admin-denied.bru  07-authz-prompt-injection.bru  08-boundary-missing-patient.bru  09-metrics.bru  10-w2-upload-lab.bru  11-w2-chat.bru  12-w2-ready.bru  collection.bru
clinical-copilot/api-collection/bruno/environments/: local.bru
clinical-copilot/app/: __init__.py  agent.py  authz.py  config.py  db.py  llm.py  main.py  normalize.py  observability.py  rules.py  schemas.py  tools.py  ui.py  verification.py
clinical-copilot/app/w2/: __init__.py  agent.py  ingest.py  schemas.py  storage.py  vlm.py
clinical-copilot/app/w2/rag/: corpus.py  (+1 more)
clinical-copilot/deploy/: k8s.yaml
clinical-copilot/eval_w2/: HARD_GATE_EVIDENCE.json  HARD_GATE_EVIDENCE.md  dataset.py  prove_hard_gate.py  rubrics.py  run_evals.py
clinical-copilot/fixtures/guidelines/: ckd-diabetes-followup.md  hypertension-ckd.md
clinical-copilot/loadtest/: locustfile.py
clinical-copilot/observability/: alerts.yml  docker-compose.yml  prometheus.yml
clinical-copilot/tests/: conftest.py  eval_dataset.py  test_evals.py  test_unit.py
clinical-copilot/tests/w2/: test_w2_core.py  test_w2_edges.py
(+60 files in other folders)
