[project]
name = "clinical-copilot"
version = "0.1.0"
description = "Clinical Co-Pilot — AI agent embedded in OpenEMR (Gauntlet AgentForge)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "aiomysql>=0.2.0",
    "httpx>=0.27",
    "openai>=1.54",
    # v2 SDK: Tracer uses the client.trace() API (removed in langfuse>=3).
    "langfuse>=2.53,<3",
    "python-json-logger>=2.0",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "locust>=2.31",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
